--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>OiSYS Application</title>
-	</head>
-	<body>
-		<h1>Start building Application now</h1>
-	</body>
-</html>
+<!DOCTYPE html><html>	<head>		<title>OiSYS Application</title>	</head>	<body>			<h1>Start building Application now</h1>	<form action="/users" method="post" target="_blank">		<span>FirstName : </span><input type="text" name="fname" id="fname" value="" ><br>		<span>LastName : </span><input type="text" name="lname" id="lname" value=""><br>		<button type="submit" id="btn">Submit</button>	</form>	<div id="display">		<h1>Display the data here</h1>	</div>	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>	<script type="text/javascript">	$('button').on('click',function(event){		event.preventDefault();		var url = "/users";				var callback = function(data){			// console.log(data);			var out = "<ul>";			$.each(data,function (key, value){				// console.log(this);				out += "<li>";				out += "FirstName : " + this.fname + "<br>";				out +=  " LastName : " + this.lname;				out += "</li>";				out += "</ul>";								$('#display').html(out);			});		};		$.getJSON(url, callback);	});	</script>	</body></html>
