--- a/public/product_handlebar.html
+++ b/public/product_handlebar.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/myscript.js"></script>
+	<script type="text/template" src="js/myscript_handlebar.js"></script>
 	
 </head>
 <body>
@@ -102,7 +102,15 @@
 		</div><!-- end of right column with col-md-9 -->
 	</div>
 	</div>	<!--end of container-->	
-
+	<script type="text/template" id="product-template">
+		<tr class="list-item">
+			<td><span><h3>{{name}}</h3></span>
+				<span>{{description}}</span>
+			</td>
+			<td><span class="label label-primary">{{price}}</span></td>
+			<td><span id="{{id}}" class="glyphicon glyphicon-remove-sign"></span></td>
+		</tr>
+	</script>
 	
 </body>
 </html>
