--- a/public/product_angular/index.html
+++ b/public/product_angular/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.1/ui-bootstrap-tpls.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+    <script src="js/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controllers/controllers.js"></script>
 </head>
@@ -27,7 +31,7 @@
     	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     	  <ul class="nav navbar-nav">
     	    <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-    	    <li><a href="#">About</a></li>
+    	    <li><a href="#/about">About</a></li>
     	    <li><a href="#">Catlog</a></li>
     	    <li><a href="#">Contact</a></li>
     	  </ul>
@@ -81,7 +85,7 @@
 						</tr>
 					</thead>
 					<tbody id="itemBody" ng-controller="product">
-						<tr>
+						<tr ng-repeat="product in productData" class="list-item">
 							<td>
 								<span><h3>{{product.name}}</h3></span>
 								<span>{{product.description}}</span>
@@ -96,11 +100,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div ng-controller="product">
-				<ul ng-repeat="product in productData">
-					<li> {{ product }} </li>
-				</ul>
-			</div>
+			<div ng-include="templates/about"></div>
 		</div><!-- end of right column with col-md-9 -->
 	</div>
 	</div>	<!--end of container-->	
