--- a/public/Routingtest/index.html
+++ b/public/Routingtest/index.html
@@ -5,6 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js
 	"></script>
+	<script type="text/javascript" src="https://code.angularjs.org/1.4.7/angular-route.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<style type="text/css">
@@ -32,7 +33,7 @@
 </head>
 <body ng-controller="testController">
 	<header>This is header</header>
-	<div ui-view></div>
+	 <ui-view></ui-view>
 	<footer>This is footer</footer>
 </body>
 </html>
