--- a/public/Routingtest/index.html
+++ b/public/Routingtest/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
-<html ng-aap="testingApp">
+<html>
 <head>
 	<title>test</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js
-	"></script>
-	<script type="text/javascript" src="https://code.angularjs.org/1.4.7/angular-route.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+	
 	<style type="text/css">
 	html, body{
 		margin: 0px;
@@ -31,9 +26,17 @@
 	}
 	</style>
 </head>
-<body ng-controller="testController">
+<body ng-aap="testingApp">
+
 	<header>This is header</header>
-	 <ui-view></ui-view>
+	<div ui-view></div>
 	<footer>This is footer</footer>
+	//scripts are laying over here.
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://code.angularjs.org/1.4.7/angular-route.min.js"></script>
+	<script src="https://code.angularjs.org/1.4.7/angular-route.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
