--- a/public/Routingtest/index.html
+++ b/public/Routingtest/index.html
@@ -1,42 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test</title>
-	
-	<style type="text/css">
-	html, body{
-		margin: 0px;
-		padding: 0px;
-	}
-	header{
-		background-color: red;
-		top: 10px;
-		position: relative;
-	}
-	footer{
-		background-color: black;
-		color: white;
-		position: absolute;
-		width: 100%;
-		bottom: 10px;
-		left: 0px;
-	}
-	h1{
-		font-size: 4em;
-	}
-	</style>
+	<title>routing test</title>
+	<script src="/node_modules/angular/angular.js"></script>
 </head>
-<body ng-aap="testingApp">
-
-	<header>This is header</header>
-	<div ui-view></div>
-	<footer>This is footer</footer>
-	//scripts are laying over here.
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="https://code.angularjs.org/1.4.7/angular-route.min.js"></script>
-	<script src="https://code.angularjs.org/1.4.7/angular-route.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
-
+<body ng-app>
+	<div>
+		<input	type="text" ng-model="name">
+		<h1>{{name}}</h1>
+	</div>
 </body>
 </html>
