--- a/public/product_angular/index.html
+++ b/public/product_angular/index.html
@@ -4,8 +4,8 @@
 	<title>Product page with angular.js</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
+	<script type="text/javascript" src="angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
 	<script type="text/javascript" scr="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="controllers/controllers.js"></script>
@@ -85,11 +85,11 @@
 					<tbody id="itemBody" ng-controller="product">
 						<tr ng-repeat="product in productData" class="list-item">
 							<td>
-								<span><h3>{{product.name}}</h3></span>
-								<span>{{product.description}}</span>
+								<span><h3>{{productData.name}}</h3></span>
+								<span>{{productData.description}}</span>
 							</td>
 							<td>
-								<span class="label label-primary">{{product.price}}</span>
+								<span class="label label-primary">{{productData.price}}</span>
 							</td>
 							<td>
 								<span data-id="{{id}}" class="glyphicon glyphicon-remove-sign"></span>
