--- a/public/Routingtest/index.html
+++ b/public/Routingtest/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
 	<title>routing test</title>
-	<script src="/node_modules/angular/angular.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.	min.css">
 </head>
-<body ng-app>
-	<div>
-		<input	type="text" ng-model="name">
-		<h1>{{name}}</h1>
+<body ng-controller="mainctlr">
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<a href="#" class="navbar-brand">Ak..</a>
+ 			<ul class="nav navbar-nav">
+				<li><a href="">About</a></li>
+				<li><a href="">Team</a></li>
+				<li><a href="">conatct</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div style="padding-top:100px">
+		<div ng-view></div>
 	</div>
 </body>
 </html>
